[tool.poetry]
name = "python-flashstation"
version = "0.1.0"
description = "USB stick flash/duplication station."
authors = ["Blake VandeMerwe"]
license = "LGPL-2.1"

[tool.poetry.dependencies]
python = "*"
inotify = "^0.2.10"
pyusb = "^1.0"
toolz = "^0.9.0"
sh = "^1.12"
click = "^7.0"

[tool.poetry.dev-dependencies]
